# Jerasure

./: configure.ac  time_jerasure_tvm.sh
Examples/: Makefile.am  jerasure_tvm.c  time_tvm_decode.c  time_tvm_multiply.c
include/: jerasure.h  tvm_jerasure.h
src/: Makefile.am  cauchy.c  jerasure.c
